# property-graphs-llama-index

./: .gitignore  README.md  app_settings.py  pg.html  pyproject.toml
codes/: basics.py  basics_neo4j.py
