[tool.poetry]
name = "property-graphs-llama-index"
version = "0.1.0"
description = ""
authors = ["Arman Tunga <armantunga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.10.55"
llama-index-llms-anthropic = "^0.1.15"
llama-index-embeddings-openai = "^0.1.10"
pydantic-settings = "^2.3.4"
llama-index-graph-stores-neo4j = "^0.2.8"
llama-index-postprocessor-cohere-rerank = "^0.1.7"



[tool.poetry.group.graph-network-visualization.dependencies]
pyvis = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
